bin/poseParser/jtb.out.jj
/* Generated by JTB 1.4.7 */


options
{
  JDK_VERSION = "1.5";
  static = true;
  // JTB_P = "poseParser";
}

PARSER_BEGIN(PoseParser)
package poseParser;

import poseParser.visitor.*;
import java.io.FileInputStream;
import poseParser.syntaxtree.*;


public class PoseParser {

  public static void main(String args[]) {
    try {
      FileInputStream fin = new FileInputStream(".\\poses\\standing.txt");
      PoseParser parser = new PoseParser(fin);
      Pose pose = PoseParser.Pose();
      DepthFirstVoidVisitor v = new MyVisitor();
      pose.accept(v);
    }
    catch (Exception e) {
      System.out.println("Oops.");
      e.printStackTrace();
    }
  }
}


class MyVisitor extends DepthFirstVoidVisitor {

  public void visit(NodeToken n) {
    System.out.println("visit " + n.tokenImage);
  }
}

class JTBToolkit {

  static NodeToken makeNodeToken(final Token t) {
    return new NodeToken(t.image.intern(), t.kind, t.beginLine, t.beginColumn, t.endLine, t.endColumn);
  }
}

PARSER_END(PoseParser)

Pose Pose() :
{
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  PoseName n2 = null;
  PoseDef n3 = null;
}
{
  n1 = "Pose"
  { n0 = JTBToolkit.makeNodeToken(n1); }
  n2 = PoseName()
  n3 = PoseDef()
  { return new Pose(n0, n2, n3); }
}

PoseDef PoseDef() :
{
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeList n2 = new NodeList();
  NodeSequence n3 = null;
  BoneName n4 = null;
  BoneDef n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
}
{
  n1 = < LPAR >
  { n0 = JTBToolkit.makeNodeToken(n1); }
  (
    { n3 = new NodeSequence(2); }
    n4 = BoneName()
    { n3.addNode(n4); }
    n5 = BoneDef()
    { n3.addNode(n5); }
    { n2.addNode(n3); }
  )+
  { n2.nodes.trimToSize(); }
  n7 = < RPAR >
  { n6 = JTBToolkit.makeNodeToken(n7); }
  { return new PoseDef(n0, n2, n6); }
}

BoneName BoneName() :
{
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeToken n5 = null;
  Token n6 = null;
  NodeToken n7 = null;
  Token n8 = null;
  NodeToken n9 = null;
  Token n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
  NodeToken n13 = null;
  Token n14 = null;
  NodeToken n15 = null;
  Token n16 = null;
  NodeToken n17 = null;
  Token n18 = null;
  NodeToken n19 = null;
  Token n20 = null;
  NodeToken n21 = null;
  Token n22 = null;
  NodeToken n23 = null;
  Token n24 = null;
  NodeToken n25 = null;
  Token n26 = null;
  NodeToken n27 = null;
  Token n28 = null;
}
{
  (
    (
      n2 = "HEAD:"
      { n1 = JTBToolkit.makeNodeToken(n2); }
      { n0 = new NodeChoice(n1, 0, 14); }
    |
      n4 = "CHEST:"
      { n3 = JTBToolkit.makeNodeToken(n4); }
      { n0 = new NodeChoice(n3, 1, 14); }
    |
      n6 = "R SHOULDER:"
      { n5 = JTBToolkit.makeNodeToken(n6); }
      { n0 = new NodeChoice(n5, 2, 14); }
    |
      n8 = "L SHOULDER:"
      { n7 = JTBToolkit.makeNodeToken(n8); }
      { n0 = new NodeChoice(n7, 3, 14); }
    |
      n10 = "UPPER R ARM:"
      { n9 = JTBToolkit.makeNodeToken(n10); }
      { n0 = new NodeChoice(n9, 4, 14); }
    |
      n12 = "LOWER R ARM:"
      { n11 = JTBToolkit.makeNodeToken(n12); }
      { n0 = new NodeChoice(n11, 5, 14); }
    |
      n14 = "UPPER L ARM:"
      { n13 = JTBToolkit.makeNodeToken(n14); }
      { n0 = new NodeChoice(n13, 6, 14); }
    |
      n16 = "LOWER L ARM:"
      { n15 = JTBToolkit.makeNodeToken(n16); }
      { n0 = new NodeChoice(n15, 7, 14); }
    |
      n18 = "R HIP:"
      { n17 = JTBToolkit.makeNodeToken(n18); }
      { n0 = new NodeChoice(n17, 8, 14); }
    |
      n20 = "L HIP:"
      { n19 = JTBToolkit.makeNodeToken(n20); }
      { n0 = new NodeChoice(n19, 9, 14); }
    |
      n22 = "UPPER R LEG:"
      { n21 = JTBToolkit.makeNodeToken(n22); }
      { n0 = new NodeChoice(n21, 10, 14); }
    |
      n24 = "LOWER R LEG:"
      { n23 = JTBToolkit.makeNodeToken(n24); }
      { n0 = new NodeChoice(n23, 11, 14); }
    |
      n26 = "UPPER L LEG:"
      { n25 = JTBToolkit.makeNodeToken(n26); }
      { n0 = new NodeChoice(n25, 12, 14); }
    |
      n28 = "LOWER L LEG:"
      { n27 = JTBToolkit.makeNodeToken(n28); }
      { n0 = new NodeChoice(n27, 13, 14); }
    )
    
  )
  { return new BoneName(n0); }
}

BoneDef BoneDef() :
{
  // --- JTB generated node declarations ---
  Position n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  Position n3 = null;
}
{
  n0 = Position()
  n2 = ","
  { n1 = JTBToolkit.makeNodeToken(n2); }
  n3 = Position()
  { return new BoneDef(n0, n1, n3); }
}

Position Position() :
{
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
}
{
  n1 = "("
  { n0 = JTBToolkit.makeNodeToken(n1); }
  n3 = < FLOAT >
  { n2 = JTBToolkit.makeNodeToken(n3); }
  n5 = ","
  { n4 = JTBToolkit.makeNodeToken(n5); }
  n7 = < FLOAT >
  { n6 = JTBToolkit.makeNodeToken(n7); }
  n9 = ","
  { n8 = JTBToolkit.makeNodeToken(n9); }
  n11 = < FLOAT >
  { n10 = JTBToolkit.makeNodeToken(n11); }
  n13 = ")"
  { n12 = JTBToolkit.makeNodeToken(n13); }
  { return new Position(n0, n2, n4, n6, n8, n10, n12); }
}

PoseName PoseName() :
{
  // --- JTB generated node declarations ---
  NodeList n0 = new NodeList();
  NodeToken n1 = null;
  Token n2 = null;
}
{
  (
    n2 = < STRING >
    { n1 = JTBToolkit.makeNodeToken(n2); }
    { n0.addNode(n1); }
  )+
  { n0.nodes.trimToSize(); }
  { return new PoseName(n0); }
}

TOKEN :
{
  < FLOAT : ["0"-"9"] ( ["0"-"9"] )* ( "." ["0"-"9"] ( ["0"-"9"] )* )? >
}

TOKEN :
{
  < LPAR : "{" >
| < RPAR : "}" >
| < STRING : ( ["a"-"z", "A"-"Z", "\'", "_", ".", "!", "?", "(", ")", "0"-"9", "\u00e0", "\u00f2", "\u00f9", "\u00e8", "\u00e9", "\u00ec"] )+ >
}

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| < "//" ( ~["\n", "\r"] )* ( "\n"| "\r"| "\r\n" ) >
| < "/*" ( ~["*"] )* "*" ( ~["/"] ( ~["*"] )* "*" )* "/" >
}
