src/poseParser/PoseParser.java
/* Generated By:JavaCC: Do not edit this line. PoseParser.java */
package poseParser;

import poseParser.visitor.*;
import java.io.FileInputStream;
import poseParser.syntaxtree.*;


public class PoseParser implements PoseParserConstants {

  public static void main(String args[]) {
    try {
      FileInputStream fin = new FileInputStream(".\u005c\u005cposes\u005c\u005cstanding.txt");
      PoseParser parser = new PoseParser(fin);
      Pose pose = PoseParser.Pose();
      DepthFirstVoidVisitor v = new MyVisitor();
      pose.accept(v);
    }
    catch (Exception e) {
      System.out.println("Oops.");
      e.printStackTrace();
    }
  }

  static final public Pose Pose() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  PoseName n2 = null;
  PoseDef n3 = null;
    n1 = jj_consume_token(1);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = PoseName();
    n3 = PoseDef();
    {if (true) return new Pose(n0, n2, n3);}
    throw new Error("Missing return statement in function");
  }

  static final public PoseDef PoseDef() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeList n2 = new NodeList();
  NodeSequence n3 = null;
  BoneName n4 = null;
  BoneDef n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
    n1 = jj_consume_token(LPAR);
    n0 = JTBToolkit.makeNodeToken(n1);
    label_1:
    while (true) {
      n3 = new NodeSequence(2);
      n4 = BoneName();
      n3.addNode(n4);
      n5 = BoneDef();
      n3.addNode(n5);
      n2.addNode(n3);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 2:
      case 3:
      case 4:
      case 5:
      case 6:
      case 7:
      case 8:
      case 9:
      case 10:
      case 11:
      case 12:
      case 13:
      case 14:
      case 15:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    n2.nodes.trimToSize();
    n7 = jj_consume_token(RPAR);
    n6 = JTBToolkit.makeNodeToken(n7);
    {if (true) return new PoseDef(n0, n2, n6);}
    throw new Error("Missing return statement in function");
  }

  static final public BoneName BoneName() throws ParseException {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeToken n5 = null;
  Token n6 = null;
  NodeToken n7 = null;
  Token n8 = null;
  NodeToken n9 = null;
  Token n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
  NodeToken n13 = null;
  Token n14 = null;
  NodeToken n15 = null;
  Token n16 = null;
  NodeToken n17 = null;
  Token n18 = null;
  NodeToken n19 = null;
  Token n20 = null;
  NodeToken n21 = null;
  Token n22 = null;
  NodeToken n23 = null;
  Token n24 = null;
  NodeToken n25 = null;
  Token n26 = null;
  NodeToken n27 = null;
  Token n28 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 2:
      n2 = jj_consume_token(2);
        n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0, 14);
      break;
    case 3:
      n4 = jj_consume_token(3);
        n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1, 14);
      break;
    case 4:
      n6 = jj_consume_token(4);
        n5 = JTBToolkit.makeNodeToken(n6);
        n0 = new NodeChoice(n5, 2, 14);
      break;
    case 5:
      n8 = jj_consume_token(5);
        n7 = JTBToolkit.makeNodeToken(n8);
        n0 = new NodeChoice(n7, 3, 14);
      break;
    case 6:
      n10 = jj_consume_token(6);
        n9 = JTBToolkit.makeNodeToken(n10);
        n0 = new NodeChoice(n9, 4, 14);
      break;
    case 7:
      n12 = jj_consume_token(7);
        n11 = JTBToolkit.makeNodeToken(n12);
        n0 = new NodeChoice(n11, 5, 14);
      break;
    case 8:
      n14 = jj_consume_token(8);
        n13 = JTBToolkit.makeNodeToken(n14);
        n0 = new NodeChoice(n13, 6, 14);
      break;
    case 9:
      n16 = jj_consume_token(9);
        n15 = JTBToolkit.makeNodeToken(n16);
        n0 = new NodeChoice(n15, 7, 14);
      break;
    case 10:
      n18 = jj_consume_token(10);
        n17 = JTBToolkit.makeNodeToken(n18);
        n0 = new NodeChoice(n17, 8, 14);
      break;
    case 11:
      n20 = jj_consume_token(11);
        n19 = JTBToolkit.makeNodeToken(n20);
        n0 = new NodeChoice(n19, 9, 14);
      break;
    case 12:
      n22 = jj_consume_token(12);
        n21 = JTBToolkit.makeNodeToken(n22);
        n0 = new NodeChoice(n21, 10, 14);
      break;
    case 13:
      n24 = jj_consume_token(13);
        n23 = JTBToolkit.makeNodeToken(n24);
        n0 = new NodeChoice(n23, 11, 14);
      break;
    case 14:
      n26 = jj_consume_token(14);
        n25 = JTBToolkit.makeNodeToken(n26);
        n0 = new NodeChoice(n25, 12, 14);
      break;
    case 15:
      n28 = jj_consume_token(15);
        n27 = JTBToolkit.makeNodeToken(n28);
        n0 = new NodeChoice(n27, 13, 14);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new BoneName(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public BoneDef BoneDef() throws ParseException {
  // --- JTB generated node declarations ---
  Position n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  Position n3 = null;
    n0 = Position();
    n2 = jj_consume_token(16);
    n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Position();
    {if (true) return new BoneDef(n0, n1, n3);}
    throw new Error("Missing return statement in function");
  }

  static final public Position Position() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
    n1 = jj_consume_token(17);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(FLOAT);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(16);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(FLOAT);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(16);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(FLOAT);
    n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(18);
    n12 = JTBToolkit.makeNodeToken(n13);
    {if (true) return new Position(n0, n2, n4, n6, n8, n10, n12);}
    throw new Error("Missing return statement in function");
  }

  static final public PoseName PoseName() throws ParseException {
  // --- JTB generated node declarations ---
  NodeList n0 = new NodeList();
  NodeToken n1 = null;
  Token n2 = null;
    label_2:
    while (true) {
      n2 = jj_consume_token(STRING);
      n1 = JTBToolkit.makeNodeToken(n2);
      n0.addNode(n1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    n0.nodes.trimToSize();
    {if (true) return new PoseName(n0);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public PoseParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xfffc,0xfffc,0x400000,};
   }

  /** Constructor with InputStream. */
  public PoseParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PoseParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PoseParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public PoseParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new PoseParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public PoseParser(PoseParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(PoseParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[29];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 29; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}


class MyVisitor extends DepthFirstVoidVisitor {

  public void visit(NodeToken n) {
    System.out.println("visit " + n.tokenImage);
  }
}

class JTBToolkit {

  static NodeToken makeNodeToken(final Token t) {
    return new NodeToken(t.image.intern(), t.kind, t.beginLine, t.beginColumn, t.endLine, t.endColumn);
  }
}
